[metadata]
name = simple-rom-manager
author = Patrick C. McGinty
author-email = casey.mcginty@gmail.com
summary = A basic command-line ROM set manager.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/cmcginty/simple-rom-manager
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving
    Topic :: Utilities
keywords =
    rom
    roms
    nointro
    datomatic
    retro
    gaming
    console
    snes
    nes
    games
    mame
    retropie
    fba

[files]
packages = srm
data_files =

[entry_points]
console_scripts = srm = smr.__main__:cli
