[metadata]
name = simple-rom-manager
python-requires = >=3.6          # ignored, see setup.py
tests-require = pytest           # ignored, see setup.py
author = Patrick C. McGinty
author-email = casey.mcginty@gmail.com
summary = A basic command-line ROM set manager.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/cmcginty/simple-rom-manager
license = MIT
keywords = rom roms nointro datomatic retro gaming console snes nes games mame retropie fba
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving
    Topic :: Utilities

[files]
packages = srm

[entry_points]
console_scripts = srm = srm.__main__:cli

[bdist_wheel]
# Set true when package runs in py2 and py3
universal = false

[aliases]
test = pytest
